[package]
name = "eternity-rs"
version = "0.2.0"
edition = "2021"
authors = ["Hitesh Jasani <hitesh.jasani@gmail.com>"]
description = "Human and bot readable durations"
# homepage = ""
license = "MIT"
readme = "README.md"
repository = "https://github.com/hiteshjasani/eternity-rs"
categories = ["time"]
keywords = ["time"]
include = ["LICENSE", "**/*.rs", "Cargo.toml", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "string_benchmark"
harness = false
